main.css
@font-face {
    font-family: mainFont;
    src: url(resources/fonts/Karla-Regular.ttf);
}
@font-face {
    font-family: mainFont;
    src: url(resources/fonts/Karla-Bold.ttf);
    font-weight: bold;
}
@font-face {
    font-family: mainFont;
    src: url(resources/fonts/Karla-Italic.ttf);
    font-style: italic;
}

@font-face {
    font-family: mainFontSegoe;
    src: url('resources/segoeui.woff') format('woff');
}

@font-face {
    font-family: headerFont;
    src: url(resources/fonts/PlayfairDisplay.ttf);
}
:root {
    --very-light-gray: #f4f4f4;
    --light-gray: #f0f0f0;
    --mid-gray: #bdbdbd;
    --dark-gray: #505050;
    --main-col: #00253b;
    --link-col: #004b9c;
}

/* MAIN ----------------------------------------------------------------- */
body {
    font-family: mainFont;
    margin: 2em;
    max-width: 1220px;
}
a {
    color: var(--link-col);
}
.button {
    background-color: var(--light-gray);
    font-weight: bold;
    color: black;
    font-size: 1.4em;
    padding: 0.2em 0.6em;
    margin: 0.6em;
    border-radius: 1em;
    border: solid 1px rgba(0, 0, 0, 0);
    text-decoration: none;
}
.button:hover {
    background-color: white;
    cursor: pointer;
    border: solid 1px var(--dark-gray);
    transition: linear 100ms;
}
.button:hover .bi {
    color: var(--dark-gray); 
}
.button .bi {
    color: #DADADA;
    margin-right: 0.2em;
}
#email {
    color: var(--link-col);
}
.link_button {
    color: rgb(58, 58, 58);
    text-decoration: none;
    margin: 0.5em;
    font-size: 1.25em;
    
}

/* HEADER ----------------------------------------------------------------- */
#header {
    display: flex;
    flex-direction: row;
    gap: 1.5em;
    padding: 1em;
}

#header-profile-pic {
    display: flex;
    align-items: center;
    justify-content: center;
}
#header-profile-pic > img {
    height: 10em;
    border-radius: 100%;
    border: solid 0px var(--dark-gray);
    box-sizing: border-box;
    filter: brightness(110%) contrast(105%);
}

#header_info {
    display: flex;
    flex-direction: column;
    gap: 1em;
    max-width: 700px;
}
#header_header {
    display: flex;
    flex-direction: column;
}
#header_title {
    font-size: 2em;
    font-family: headerFont;
    font-weight: 500;
    margin-top: 1px;
    color: var(--main-col);
}
#header_subtitle {
    font-family: mainFont;
    font-size: 1.25em;
    font-weight: bold;
    color: var(--main-col);
}
#header_description {
    width: 100%;
}
#languages {
    color: var(--dark-gray);
    opacity: 0.75;
}


#contact_info {
    background-color: var(--very-light-gray);
    display: flex;
    flex-direction: row;
    gap: 0 2em;
    justify-content: center;
    flex-wrap: wrap;
}
.contact_info_item {
    display: flex;
    padding: 0.5em;
    flex-direction: row;
    gap: 8px;
    align-items: center;
    text-decoration: none;
    color: black;
    transition: 100ms linear;
}
.contact_info_item:hover {
    background-color: white;
    transition: 100ms linear;
}
.contact_info_item:hover>i {
    color: var(--link-col);
    transition: 100ms linear;
}

/* LINKS ----------------------------------------------------------------- */
#links {
    display: flex;
    flex-direction: row;
    text-align: center;
    justify-content: center;
}

/* PROJECTS ----------------------------------------------------------------- */
.projects_wrapper {
    display: flex;
    flex-direction: column;
    padding: 2em; 
}
.projects {
    margin-bottom: 1.5em;
    display: flex;
    flex-direction: column;
    border-left: 1px solid var(--mid-gray)
}
.projects-label {
    font-size: 1.35em;
    font-weight: bold;
    padding: 0.4em 0.6em;
    padding-right: 2em;
    display: flex;
    flex-direction: row;
    gap: 0.6em;
    align-items: center;
    position: relative;
    /*width: fit-content;*/
    border-bottom: 1px solid var(--mid-gray);
    color: var(--dark-gray);
}
.projects-label>i {
    /*color: var(--dark-gray);*/
    /*margin-right: 0.4em;*/
    filter: brightness(60%);
}
.projects-frame {
    /*box-sizing: border-box;*/
    display: flex;
    flex-direction: row;
    row-gap: 1em;
    padding: 1em;
    padding-right: 0.5em
}
.projects-grid {
    display: flex;
    flex-direction: row;
    gap: 1em;
    flex-wrap: wrap;
}

#modal-content-wrapper>.project-box {
    max-width: none;
}

.project-box {
    flex-grow: 1;
    max-width: 32%;
    background-color: var(--light-gray);
    border-top-left-radius: 1em;
    border-top-right-radius: 1em;
    display: flex;
    flex-direction: column;
    align-items: center;
    box-sizing: border-box;
    transition: 100ms ease-out;
}
.projects-grid .project-box:hover { 
    cursor: pointer;
    background-color: rgba(56, 56, 56, 0.15);
    transition: 150ms ease-out;
}
.project-box-date {
    font-weight: bold;
    padding-top: 0.4em;
    font-size: 1.2em;
    color: #13232D;
}
.project-box-duration {
    font-size: 1em;
    padding-bottom: 0.2em;
}
.project-box-duration i {
    margin-right: 0.2em;
}
.project-box-thumbnail {
    padding: 0.4em;
    box-sizing: border-box;
}
.project-box-thumbnail img {
    width: 100%;
    transform: scale(1);
    border: solid 0.3em rgba(0, 0, 0, 0); 
    transition: 80ms ease-out;
    box-sizing: border-box;
}
.projects-grid .project-box:hover .project-box-thumbnail img {
    transform: scale(1.07);
    border: solid 0.3em var(--dark-gray); 
    transition: 120ms ease-out;
}
.project-box-name {
    font-weight: bold;
    font-size: 1.4em;
    color: var(--main-col);
    display: flex;
    flex-direction: row;
    width: 92%;
}
.project-box-name:before,
.project-box-name:after {
    content: " ";
    flex: 1 1;
    border-bottom: 0.1em solid var(--main-col);
    margin: auto;
}
.project-box-name:before {
    margin-right: 0.5em;
}
.project-box-name:after {
    margin-left: 0.5em;
}
.project-box-madewith {
    padding-bottom: 0.6em;
}

/* PROJECT ZOOMIN --------------------------------------------------------- */
#modal-content-wrapper {
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
    margin: 2em;
}
.project-template {
    display: none;
}
.projet-box-zoomin {
    width: 60%;
    height: fit-content;
    margin-right: 2em;
}
.project-box-video {
    margin: 0.5em 0em;
    display: flex;
    justify-content: center;
    align-items: center;
}
.project-box-video img {
    width: 90%;
}
.project-box-video-wrapper {
    background-color: white;
   
}
.project-descriptions {
    width: 40%;
    padding: 0.5em 0em;
    display: flex;
    flex-direction: column;
}
.project-decription-header {
    margin-bottom: 0.5em;
    font-size: 1.2em;
    font-weight: bold;
    position: relative; 
    width:fit-content
}
.project-decription-header-underline {
    height: 0.5em;
    background: rgba(29, 51, 68, 0.32);
    position: absolute;
    transform: skewX(-30deg);
    bottom: 0em;
    opacity: 0.5;
    left: -5px;
    right: -5px;
    z-index: -10;
}
.project-description-text {
    margin-bottom: 1em;
    text-align: left;
}
.project-description-text ul {
    margin-top: inherit;
    padding-left: 1em;
    margin-bottom: 0;
}
.project-description-text ul li {
    list-style: square;
}

#modal {
    display: none; 
    position: fixed; 
    z-index: 1; 
    left: 0;
    top: 0;
    width: 100%; 
    height: 100%; 
    overflow: hidden; 
    background-color: rgba(0, 0, 0, 0.6);
    animation: modal-fade-in 250ms cubic-bezier(0, 0.5, 0.5, 1);
}
@keyframes modal-fade-in {
    0% {
        background-color: rgba(0, 0, 0, 0); 
    }
    100% {
        background-color: rgba(0, 0, 0, 0.6); 
    }
}
#modal-content {
    background-color: #fefefe;
    position: absolute;
    border-radius: 0.5em; 
    left: 50%;
    top: 50%;
    padding: 1em;
    width: 60%;
    transform: translate(-50%, -50%);
}
.modal-anim-up {
    animation: modal-anim-up 250ms cubic-bezier(0, 0.5, 0.5, 1);
}
@keyframes modal-anim-up {
    0% {
        top: 55%;
    }
    100% {
        top: 50%;
    }
}

.close {
    color: #aaa;
    float: right;
    margin-right: 0.25em;
    font-size: 2em;
    font-weight: bold;
}
.close:hover,
.close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.project-button-wrapper {
    width: 100%;
    text-align: center;
    margin: 1.5em 0em;
}
.project-button {
    font-size: 1.2em;
    background-color: var(--very-light-gray);
    font-weight: bold;
    color: var(--link-col);
    padding: 0.25em 0.25em;
    border-bottom: solid 2px var(--link-col);
    text-decoration: none;
    transition: 80ms ease-out;
    display: flex;
    flex-direction: row;
    align-items: center;
    width: fit-content;
    margin: auto;
}
.project-button:hover {
    cursor: pointer;
    color: var(--link-col);
    background-color: rgba(56, 56, 56, 0.15);
    padding: 0.25em 1em;
    border-bottom: solid 2px var(--link-col);
    /*border-right: solid 2px var(--main-col);*/
    transition: 120ms ease-out;
}

/* FOOTER ----------------------------------------------------------------- */
#row {
    display: flex;
}
#footer {
    background-color: var(--light-gray);
    width: 100%;
    margin-top: 2em;
    padding-bottom: 1em;
}
#footer-text {
    margin: 1em;
    text-align: center;
}
#footer-text-header {
    color: var(--dark-gray);
    font-size: 1.8em;
    font-weight: bold;
    padding: 0.2em 0em;
}
#footer-text-description {
    color: white;
    font-size: 1.4em;
    padding: 0.2em 0em;
    text-align: center;
    text-justify: inter-word;
}

/* RESPONSIVE --------------------------------------------------------------- */
@media screen and (max-width: 1000px) {
    body {
        margin: 0.5em;
        box-sizing: border-box;
    }
    #contact_info {
        gap: 0 0.5em;
    }
    .project-box {
        max-width: 48%;
    }
}

@media screen and (max-width: 800px) {
    #modal {
        overflow: auto;
    }
    #modal-content {
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
        box-sizing: border-box;
        border-radius: 0;
    }
    #modal-content-wrapper {
        flex-direction: column;
    }
    .projet-box-zoomin {
        width : 100%;
    }
    .project-descriptions {
        width: 100%;
        margin-top: 1em;
    }

    #modal-content {
        width: 100%;
        top: 0;
        transform: translate(-50%, 0);
        padding: 0;
    }
    @keyframes modal-anim-up {
        0% {
            top: 55%;
        }
        100% {
            top: 0;
        }
    }
    #modal {
        background-color: white;
    }
    @keyframes modal-fade-in {
        0% {
            background-color: rgba(0, 0, 0, 0); 
        }
        100% {
            background-color: white; 
        }
    }
    #header-text-name, #footer-text-header {
        font-size: 1.4em;
    }
    #header-text-description, #footer-text-description {
        font-size: 1.1em;
    }
    #header-text-description > div {
        margin-bottom: 0.6em; 
    }
}

@media screen and (max-width: 605px) {
    .project-box {
        width: 100%;
        max-width: none;
    }
    .projects-grid {
        flex-direction: column;
    }
    #header_header {
        align-items: center;
    }
    #header {
        flex-direction: column;
    }
    #header_description {
        text-align: center;
    }
    #header-profile-pic {
        width: 100%;
    }
    #contact_info {
        padding-top: 0.5em;
        padding-bottom: 0.5em;
        gap: 0 0.5em;
    }
    .projects-label {
        font-size: 1.6em;
        padding-right: 0.5em;
    }
}

